Add details about procedural formality tagging

--- a/citations.bib
+++ b/citations.bib
@@ -108,3 +108,17 @@ month = {02},
 pages = {},
 title = {Formality of Language: definition, measurement and behavioral determinants}
 }
+@article{DBLP:journals/corr/abs-2005-04560,
+  author    = {Xiang Lisa Li and
+               Alexander M. Rush},
+  title     = {Posterior Control of Blackbox Generation},
+  journal   = {CoRR},
+  volume    = {abs/2005.04560},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2005.04560},
+  eprinttype = {arXiv},
+  eprint    = {2005.04560},
+  timestamp = {Thu, 14 May 2020 16:56:02 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2005-04560.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
