--- a/report.tex
+++ b/report.tex
@@ -191,6 +191,65 @@ This setup doesn't even require any fine-tuning, simply deploying existing mask-
 
 Some other techniques for politeness labelling of Japanese and other languages had been proposed, and we will discuss them briefly here. Dugan \cite{Dugan:20} proposed generating politeness labels from the corresponding English translation, an idea we didn't find convincing due to the inherent problems associated with inferring formality from English which has relatively few clear markers for formality, not the mention the problem with noise introduced by otherwise perfect translations with incorrect formality.
 
+\section{Evaluation metrics}
+
+We propose a number of different ways to evaluate the translation quality and the sentence reconstruction quality for our different tasks. We analyse the level of correlation between these different metrics on different tasks.
+
+\subsection{Alignment BLEU score}
+
+We use the NLTK toolkit \cite{NLTK} to evaluate the BLEU score of our translations or sentence reconstructions. BLEU score is calculated as the proportion of n-gram overlaps between the hypothesis and the reference; due to only having a single sentence per training data point, such a score is not necessarily a good estimate of the model quality. It also doesn't have a good correlation with sentence formality.
+
+\subsection{Alignment RIBES score}
+
+The NLTK toolkit \cite{NLTK} also supports RIBES score. RIBES evaluates similarly to BLEU, but it is more lenient in terms of the ordering of tokens. This is not to say that RIBES doesn't care about the location of different parts of speech at all; it just doesn't punish it as harshly. This is useful for languages like Japanese, where the purposes of phrases in the sentence are determined by the article/tag characters attached to them rather than through order. As such, we looked at RIBES score as well, and as expected, our RIBES scores were generally about 2 times better than corresponding BLEU scores early into training but only a few points better later on. 
+
+\subsection{Manual, Human Evaluation}
+To manually evaluate the translations with human eyes, we randomly sampled 261 (an arbitrary but large enough number) sentences. Among these sentences, we noticed certain patterns in both successful translations and potentially questionable ones. 
+
+The first type of common difficulty was cases where the Japanese sentences omitted some sort of information in the sentence, likely due to it being obvious contextually. Unfortunately for the machine, it is not given this context, so it must sometimes translate incomplete sentences and essentially make an educated guess at certain contexts. Sometimes, it actually manages to do a good job at this, preserving the overall meaning of the phrase. For example: 
+
+"5百万回も見られることになりました"  is translated into: 
+
+"Seen five million times."
+
+In this case, the Japanese sentence is missing a subject. "Seen five million times" is a good word-for-word translation, but any Japanese person would understand that there's some object that being seen. Without contextual knowledge, the best way to handle this may be to use a generic pronoun, such as "it," creating the sentence, "it will be seen five million times." In this sentence specifically, the information contained in "will be" is also missing from our translation. Many other translations of this same structure were also missing tense information though, so we suspect that it has something to do with time-determiners like "will" or "has" being treated as attached to a subject; ie. they would be missing should the subject be missing.
+
+There are some sentences where the translation loses information, though in many of these cases, the translation in still reasonable and sometimes even more reasonable without context. For example:
+
+"何するんだサイラス" is translated into
+
+"What are you doing Cyrus?"
+
+The translation provided in the parallel corpus is, "what the hell are you doing, Cyrus?" The "the hell" part got left out, but there's no word in the Japanese sentence the means "the hell." That information would entirely be gained from context or tone. As such, this is an interesting case where context-aside, the machine translation might be considered better than what a BLEU or RIBES score might say. Of course, this still speaks to the machine's weakness in situations where it does need to know context.
+
+Finally, there are some sentences where the translation adds information. These are rare, and it's hard to find a pattern in why it's occurring, as the situations in which it occurs are varied. Often times the additions are conjunctions or articles rather than full on noun or verb phrases. For example: 
+
+"ジョーンズは味方だよ" is translated into
+
+"and jones is on our side."
+
+The translation is pretty accurate, but the "and" is completely new information created by the translator. One could suspect that it has something to do with Katakana being present in the sentences, as Katakana is often used to loan/foreign words that needs to just be sounded out. This happens in cases without Katakana, and the Katakana is those cases is usually translated correctly without showing any other obvious errors stemming from an issue relating to its use, so we think that this is not the case. 
+
+The patterns mentioned are the ones seen most often when the translations are close but not perfect. Aside from these, most incorrect translations just fail to capture the meaning entirely or are absurd. Some are closer than others, of course, but once they're not close enough to correct, it's difficult to spot meaningful patterns.
+
+\subsection{Formality Class accuracy}
+
+Our model's understanding of formality is undoubtedly one of the most important aspects of its performance. For the purpose of this study, we evaluate the formality awareness of the sentences generated by the model by passing them through the procedural formality classification system we used to tag our corpus with formality labels.
+
+A limitation to this approach, similar to what happened when we were generating our corpus formality tags, was that there are sentences that do not contain any formality marker: ie. sentence that contain no conjugated verb or adjective, or sentences with "inconclusive" formality. While this is not really an issue during corpus tagging (we removed all inconclusive sentences), this problem is very pronounced when testing on generated sentences, since many are not grammatically well-formed and cannot have their formality measured. As such, there is a level of correlation between translation quality and sentence formality awareness.
+
+All the "formality awareness" results in our study are measured by the ratio of generated sentences that had the correct formality as measured the procedural tagger, over the total number of sentences. The total number of sentences include any inconclusive sentences which may have been generated. 
+
+\subsection{Other evaluation metrics}
+
+Here we briefly discuss other evaluation metrics that we considered using but which didn't make it into the final pipeline.
+
+\subsubsection{Sentence Embedding Similarity}
+
+Comparing the embedding similarity of two sentences is hardly a trivial problem. In order to make our evaluation task tractable, we use a rather trivial construction where we define the embedding of a sentence as the average embedding of all word embeddings in the sentence. We then define sentence similarity as the dot product between the embedding of the two sentences. 
+
+We observe that, while such an approach would allow for the model to learn directly from the final evaluation metric (since the sentence embedding similarity could be back-propagated), it would additional complexity and thus computation overhead to our existing pipeline due to the need for a sentence embedder. It is also not immediately obvious whether a pre-trained sentence embedding should be used, or whether we should train a separate encoder instead. Finally, sentence embedding similarity has no obvious connection to our ultimate goal: formality-aware translation. As such, we decided against using sentence embedding similarity as our evaluation metric.
+
 \section{Model Architecture}
 
 A number of possible architectures could be used to integrate the translation task with the formality labelling task. We implement a number of thems, comparing their performance when their tasks are comparable.
@@ -345,66 +404,9 @@ We next experiment with different weights for the translation and formality awar
 
 Next we experiment with the additive formality embedding scheme, which had yielded superior results for the sentence reconstruction setting. We start of by giving equal weights to back translation loss and formality awareness loss. We measured a BLEU score of $15.8$, a RIBES score of $32.0$, and a formality awareness of $.259$. We observe that while the system's translation quality was relatively unaffected, the formality awareness failed to beat the benchmark of $.382$. We therefore conclude that additive formality embedding is not powerful enough for enforcing formality on the back-translated output.
 
-\section{Evaluation metrics}
+\section{Conclusion}
 
-We propose a number of different ways to evaluate the translation quality and the sentence reconstruction quality for our different tasks. We analyse the level of correlation between these different metrics on different tasks.
-
-\subsection{Alignment BLEU score}
-
-We use the NLTK toolkit \cite{NLTK} to evaluate the BLEU score of our translations or sentence reconstructions. BLEU score is calculated as the proportion of n-gram overlaps between the hypothesis and the reference; due to only having a single sentence per training data point, such a score is not necessarily a good estimate of the model quality. It also doesn't have a good correlation with sentence formality.
-
-\subsection{Alignment RIBES score}
-
-The NLTK toolkit \cite{NLTK} also supports RIBES score. RIBES evaluates similarly to BLEU, but it is more lenient in terms of the ordering of tokens. This is not to say that RIBES doesn't care about the location of different parts of speech at all; it just doesn't punish it as harshly. This is useful for languages like Japanese, where the purposes of phrases in the sentence are determined by the article/tag characters attached to them rather than through order. As such, we looked at RIBES score as well, and as expected, our RIBES scores were generally about 2 times better than corresponding BLEU scores early into training but only a few points better later on. 
-
-\subsection{Manual, Human Evaluation}
-To manually evaluate the translations with human eyes, we randomly sampled 261 (an arbitrary but large enough number) sentences. Among these sentences, we noticed certain patterns in both successful translations and potentially questionable ones. 
-
-The first type of common difficulty was cases where the Japanese sentences omitted some sort of information in the sentence, likely due to it being obvious contextually. Unfortunately for the machine, it is not given this context, so it must sometimes translate incomplete sentences and essentially make an educated guess at certain contexts. Sometimes, it actually manages to do a good job at this, preserving the overall meaning of the phrase. For example: 
-
-"5百万回も見られることになりました"  is translated into: 
-
-"Seen five million times."
-
-In this case, the Japanese sentence is missing a subject. “Seen five million times” is a good word-for-word translation, but any Japanese person would understand that there’s some object that being seen. Without contextual knowledge, the best way to handle this may be to use a generic pronoun, such as “it,” creating the sentence, “it will be seen five million times.” In this sentence specifically, the information contained in “will be” is also missing from our translation. Many other translations of this same structure were also missing tense information though, so we suspect that it has something to do with time-determiners like “will” or “has” being treated as attached to a subject; ie. they would be missing should the subject be missing.
-
-There are some sentences where the translation loses information, though in many of these cases, the translation in still reasonable and sometimes even more reasonable without context. For example:
-
-"何するんだサイラス" is translated into
-
-"What are you doing Cyrus?"
-
-The translation provided in the parallel corpus is, “what the hell are you doing, Cyrus?” The “the hell” part got left out, but there’s no word in the Japanese sentence the means “the hell.” That information would entirely be gained from context or tone. As such, this is an interesting case where context-aside, the machine translation might be considered better than what a BLEU or RIBES score might say. Of course, this still speaks to the machine’s weakness in situations where it does need to know context.
-
-Finally, there are some sentences where the translation adds information. These are rare, and it’s hard to find a pattern in why it’s occurring, as the situations in which it occurs are varied. Often times the additions are conjunctions or articles rather than full on noun or verb phrases. For example: 
-
-"ジョーンズは味方だよ" is translated into
-
-"and jones is on our side."
-
-The translation is pretty accurate, but the “and” is completely new information created by the translator. One could suspect that it has something to do with Katakana being present in the sentences, as Katakana is often used to loan/foreign words that needs to just be sounded out. This happens in cases without Katakana, and the Katakana is those cases is usually translated correctly without showing any other obvious errors stemming from an issue relating to its use, so we think that this is not the case. 
-
-The patterns mentioned are the ones seen most often when the translations are close but not perfect. Aside from these, most incorrect translations just fail to capture the meaning entirely or are absurd. Some are closer than others, of course, but once they’re not close enough to correct, it’s difficult to spot meaningful patterns.
-
-\subsection{Formality Class accuracy}
-
-Our model's understanding of formality is undoubtedly one of the most important aspects of its performance. For the purpose of this study, we evaluate the formality awareness of the sentences generated by the model by passing them through the procedural formality classification system we used to tag our corpus with formality labels.
-
-A limitation to this approach, similar to what happened when we were generating our corpus formality tags, was that there are sentences that do not contain any formality marker: ie. sentence that contain no conjugated verb or adjective, or sentences with "inconclusive" formality. While this is not really an issue during corpus tagging (we removed all inconclusive sentences), this problem is very pronounced when testing on generated sentences, since many are not grammatically well-formed and cannot have their formality measured. As such, there is a level of correlation between translation quality and sentence formality awareness.
-
-All the "formality awareness" results in our study are measured by the ratio of generated sentences that had the correct formality as measured the procedural tagger, over the total number of sentences. The total number of sentences include any inconclusive sentences which may have been generated. 
-
-\subsection{Other evaluation metrics}
-
-Here we briefly discuss other evaluation metrics that we considered using but which didn't make it into the final pipeline.
-
-\subsubsection{Sentence Embedding Similarity}
-
-Comparing the embedding similarity of two sentences is hardly a trivial problem. In order to make our evaluation task tractable, we use a rather trivial construction where we define the embedding of a sentence as the average embedding of all word embeddings in the sentence. We then define sentence similarity as the dot product between the embedding of the two sentences. 
-
-We observe that, while such an approach would allow for the model to learn directly from the final evaluation metric (since the sentence embedding similarity could be back-propagated), it would additional complexity and thus computation overhead to our existing pipeline due to the need for a sentence embedder. It is also not immediately obvious whether a pre-trained sentence embedding should be used, or whether we should train a separate encoder instead. Finally, sentence embedding similarity has no obvious connection to our ultimate goal: formality-aware translation. As such, we decided against using sentence embedding similarity as our evaluation metric.
-
-\section{Future work}
+\section{Future Work}
 
 \subsection{Potential improvements to procedural formality evaluation}
 
