Update evaluation section

--- a/citations.bib
+++ b/citations.bib
@@ -122,3 +122,41 @@ title = {Formality of Language: definition, measurement and behavioral determina
   biburl    = {https://dblp.org/rec/journals/corr/abs-2005-04560.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+@inproceedings{isozaki-etal-2010-automatic,
+    title = "Automatic Evaluation of Translation Quality for Distant Language Pairs",
+    author = "Isozaki, Hideki  and
+      Hirao, Tsutomu  and
+      Duh, Kevin  and
+      Sudoh, Katsuhito  and
+      Tsukada, Hajime",
+    booktitle = "Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing",
+    month = oct,
+    year = "2010",
+    address = "Cambridge, MA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/D10-1092",
+    pages = "944--952",
+}
+@inproceedings{10.3115/1073083.1073135,
+author = {Papineni, Kishore and Roukos, Salim and Ward, Todd and Zhu, Wei-Jing},
+title = {BLEU: A Method for Automatic Evaluation of Machine Translation},
+year = {2002},
+publisher = {Association for Computational Linguistics},
+address = {USA},
+url = {https://doi.org/10.3115/1073083.1073135},
+doi = {10.3115/1073083.1073135},
+abstract = {Human evaluations of machine translation are extensive but expensive. Human evaluations can take months to finish and involve human labor that can not be reused. We propose a method of automatic machine translation evaluation that is quick, inexpensive, and language-independent, that correlates highly with human evaluation, and that has little marginal cost per run. We present this method as an automated understudy to skilled human judges which substitutes for them when there is need for quick or frequent evaluations.},
+booktitle = {Proceedings of the 40th Annual Meeting on Association for Computational Linguistics},
+pages = {311–318},
+numpages = {8},
+location = {Philadelphia, Pennsylvania},
+series = {ACL '02}
+}
+@misc{wieting2019bleu,
+      title={Beyond BLEU: Training Neural Machine Translation with Semantic Similarity}, 
+      author={John Wieting and Taylor Berg-Kirkpatrick and Kevin Gimpel and Graham Neubig},
+      year={2019},
+      eprint={1909.06694},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
