--- a/report.tex
+++ b/report.tex
@@ -91,7 +91,7 @@ style=alphabetic,
 
 
 \begin{document}
-\title{Multi Politeness-Domain Neural Machine Translation for Japanese}
+\title{Formality-Aware Neural Machine Translation for Japanese-English}
 
 \author{Henry Li Xinyuan, Jerry Chen, Ray Lee}
 
